# text_extractor

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  package.json  process_image.py  pyproject.toml
myapp/: urls.py  views.py
myapp/templates/: file_upload.html  main_page.html
static/: style.css
static/css/: style.css
static/js/: index.js
templates/: home.html
text_extractor/: asgi.py  main.py  process_image.py  settings.py  urls.py  wsgi.py
