[tool.poetry]
name = "text_extractor"
version = "0.1.0"
description = ""
authors = ["Clara Battesini <clarabattesini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytesseract = "^0.3.10"
fastapi = "^0.95.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
