[project]
name = "text_extractor"
version = "0.1.0"
description = ""
authors = ["Clara Battesini <clarabattesini@gmail.com>"]
readme = "README.md"

requires-python = ">=3.12"

dependencies = [
  "pytesseract>=0.3.10,<0.4",
  "fastapi>=0.95.1,<0.96",
  "uvicorn[standard]>=0.21.1,<0.22",
  "starlette>=0.26.1,<0.27",
  "jinja2>=3.1.2,<3.2",
  "python-multipart>=0.0.6,<0.1",
  "pillow>=9.5.0,<10.0",
]
